# daily-report

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  README.md  biome.json  components.json  index.html  install.sh  knip.json  lefthook.yaml  lingui.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/superpowers/plans/: 2026-07-08-auto-submit-auto-close.md  2026-07-08-favorites.md  2026-07-11-custom-portal-credentials.md  2026-07-12-account-verification.md  2026-07-12-cicd.md
docs/superpowers/specs/: 2026-07-08-auto-submit-auto-close-design.md  2026-07-08-favorites-design.md  2026-07-11-custom-portal-credentials-design.md  2026-07-12-account-verification-design.md  2026-07-12-cicd-design.md  2026-07-13-version-bump-script-design.md
e2e/: smoke.e2e.ts  tsconfig.json  wdio.conf.ts
graphify-out/: .graphify_labels.json  .graphify_learning.json  .graphify_python  .graphify_root  .vocab.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-07-22/: .graphify_labels.json  GRAPH_REPORT.md  graph.json
graphify-out/2026-07-24/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: last_query_stamp  stat-index.json
graphify-out/memory/: query_20260720_161901_update_the_readme_md_file_about_graphify_usage.md
scripts/: bump-version.mjs
src/: AccountForm.tsx  App.css  App.tsx  DateCard.tsx  DateList.tsx  DefaultProjectSelect.tsx  PreferencesForm.tsx  SettingsForm.tsx  Task.tsx  TaskList.tsx  ThemeToggle.tsx  account-form.tsx  date-card.tsx  date-list.tsx  default-project-select.tsx  getStore.ts  main.tsx  open-member-page-button.tsx  preferences-form.tsx  project-list-select.tsx  refresh-date-list-button.tsx  reset-app-button.tsx  store.ts  theme-select.tsx  theme-toggle.tsx  type.ts  useJiraTasks.ts  useTaskOptions.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: account-form.tsx  auto-close-toggle.tsx  auto-submit-toggle.tsx  autofill-summary-toggle.tsx  date-card.tsx  date-list.tsx  default-project-select.tsx  default-task-groups-select.tsx  error-fallback.test.tsx  error-fallback.tsx  favorites-form.tsx  locale-toggle.tsx  open-member-page-button.tsx  preferences-form.tsx  project-list-select.tsx  project-map-form.tsx  refresh-date-list-button.tsx  reset-app-button.tsx  sign-out-button.tsx  task-select.tsx  theme-provider.tsx  theme-select.tsx  theme-toggle.tsx  version.tsx
src/components/shared/: button.tsx  card.tsx  checkbox.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  label.tsx  select.tsx  span-required.tsx  switch.tsx  tooltip.tsx
src/lib/: date-card-helpers.test.ts  date-card-helpers.ts  i18n.ts  mutations.ts  queries.ts  store.test.ts  store.ts  task-groups.ts  use-reset-when-away.ts  use-update-check.ts
src/locales/en/: messages.po
src/locales/th/: messages.po
src/test/: setup.ts  tauri.ts
