[package]
name = "daily-report"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "daily_report_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = "0.9.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
thiserror = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"

# https://v2.tauri.app/concept/size/
[profile.dev]
incremental = true

# Dependencies (chromiumoxide, tokio, ...) are compiled once and cached, so
# optimizing them keeps incremental rebuilds fast while the dev binary's
# CDP/websocket handling runs at near-release speed. Our own crate stays at
# opt-level 0 for fast rebuilds and accurate debugging.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
